@@ -1,3 +1,5 @@
+Fractions Intro: Removed unused cake code
+Fractions Intro: Fixed: Cake container slices do not match up exactly with the slice locations
 # 0.00.48 (62151) Mar 3, 2012
 Matching Game: Rounded edges of the equals sign and tuned its size and stroke thickness
 Matching Game: Reduced pitch by an octave
